# syrotechhackathon

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: index.py
core/: settings.py  urls.py  wsgi.py
directory/: admin.py  forms.py  models.py  urls.py  views.py
directory/management/: __init__.py
directory/management/commands/: __init__.py  seed_realistic_data.py
directory/migrations/: 0001_initial.py
ledger/: admin.py  models.py  urls.py  views.py
ledger/migrations/: 0001_initial.py
matches/: admin.py  models.py  urls.py  views.py
matches/migrations/: 0001_initial.py
reviews/: admin.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
scripts/: seed_data.py
templates/: base.html
templates/accounts/: profile.html
templates/directory/: homepage.html  offer_detail.html  offer_form.html  offers_list.html  request_detail.html  request_form.html  requests_list.html
templates/directory/partials/: _offer_card.html  _offers_results.html  _request_card.html  _requests_results.html
templates/ledger/: wallet.html
templates/matches/: matches_list.html  propose_form.html
templates/matches/partials/: _match_row.html
templates/registration/: login.html  signup.html
templates/reviews/: pending.html  review_form.html
tests/: test_forms.py  test_ledger.py  test_matches_permissions.py
