[project]
name = "skillbank"
version = "0.1.0"
description = "Skill-Swap Time Bank MVP"
requires-python = ">=3.12"
dependencies = [
  "Django>=5,<6",
  "django-crispy-forms>=2,<3",
  "crispy-tailwind>=0.5,<1",
  "whitenoise>=6,<7",
  "dj-database-url>=2,<3",
  "python-dotenv>=1,<2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]


